fix the fucking horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 .jumbotron {
   padding-top: 6rem;
   background-color: #d3e3fd;
